移植聚合存储缓存到 Forge 1.12.2 / Port aggregate storage cache to Forge 1.12.2